<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inventoryHomeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/generalMargin">

            <TextView

                android:text="@string/description"
                style="@style/itemDescription"
                />

            <TextView

                android:id="@+id/itemDescription"
                style="@style/itemDescription"
                android:text=" "
                android:layout_weight="2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/generalMargin">


            <TextView

                android:text="@string/price"
                style="@style/itemPrice"/>

            <TextView
                android:id="@+id/itemPrice"
                style="@style/itemPrice"
                android:text=" "/>

            <TextView

                android:text="@string/quantity"
                style="@style/itemQuantity"/>

            <TextView
                android:id="@+id/itemQuantity"
                style="@style/itemQuantity"
                android:text=" "
                />
            <TextView
                android:id="@+id/itemISBN"
                android:text="@string/isbn"
                android:visibility="invisible"
                style="@style/itemIsbn"/>
            <TextView
                style="@style/itemIsbn"
                android:text=" "
                android:visibility="invisible"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="@dimen/reducedPadding"
                android:layout_height="wrap_content"
                android:id="@+id/centerdevider"
                android:layout_centerHorizontal="true"/>
            <Button
                android:id="@+id/saleItemButton"
                android:layout_width="@dimen/buttonLength"
                android:layout_height="wrap_content"
                android:text="@string/sale"
                android:layout_toLeftOf="@+id/centerdevider"
                android:layout_gravity="center"
                android:focusable="false"
                android:visibility="invisible"
                android:layout_marginTop="@dimen/generalMargin"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/mediumPadding"
                android:background="@color/black"
                android:textColor="@color/buttonFonts"/>
            <Button
                android:layout_width="@dimen/buttonLength"
                android:layout_height="wrap_content"
                android:id="@+id/itemUpdateInventoryRecord"
                android:text="@string/updateRecord"
                android:focusable="false"
                android:visibility="invisible"
                android:layout_gravity="center"
                android:layout_toRightOf="@+id/centerdevider"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/mediumPadding"
                android:background="@color/buttonColor5"
                android:textColor="@color/buttonFonts"
                />



        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/generalMargin"
            android:orientation="horizontal"
            >


            <TextView
                android:id="@+id/itemSupplier"
                style="@style/itemSupplier"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/itemSupplierPhone"
                style="@style/itemSupplier"
                android:visibility="invisible" />


        </LinearLayout>





    </LinearLayout>


</android.support.constraint.ConstraintLayout>